# sound

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  demo.py  main.py  pyproject.toml  reference_word_male.m4a
.github/workflows/: ci.yml
easywakeword/: __init__.py  matching.py  recogniser.py  silence.py  transcription.py  utils.py
examples/: README.md
scripts/: generate_example_wavs.py
sound.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sound_recognition/: __init__.py  audio_utils.py  matching.py  recogniser.py  silence.py  sound_buffer.py  transcriber.py  transcription.py  utils.py  word_matcher.py
tests/: test_matching.py
