[project]
name = "sound"
version = "0.1.0"
description = "Wake word detection and speech transcription module"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "sounddevice>=0.5.3",
    "librosa>=0.10.2",
    "scipy>=1.15.0",
    "soundfile>=0.12.1",
    "requests>=2.32.5",
]

[project.scripts]
sound-poc = "main:main"

[tool.setuptools.packages.find]
include = ["sound_recognition*"]
