[project]
name = "easywakeword"
version = "0.1.0"
description = "Lightweight wake-word detection and MFCC-based word matching"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.5.3",
    "librosa>=0.10.2",
    "scipy>=1.10",
    "soundfile>=0.12.1",
    "requests>=2.32.5",
]
authors = [ { name = "Raymond Lowe", email = "you@example.com" } ]
urls = { Homepage = "https://github.com/raymondclowe/sound", Documentation = "https://github.com/raymondclowe/sound#readme" }
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.1",
    "flake8>=6.0",
    "build>=1.0",
    "twine>=4.0",
]

 

[project.scripts]
easywakeword-demo = "demo:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "examples", "scripts", ".github"]
